Fixed Navbar flex wrap on Iphone SE

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -260,11 +260,11 @@ nav.nav {
   font-family: $font-header;
 }
 @media only screen and (max-width: 576px) {
-  .page-children > div.btn-line-color1 {
+  .nav .nav-container > div.btn-line-color1 {
     display: inline-block;
     position: fixed;
     right: 35px;
-    bottom: 80px;
+    bottom: 15px;
     box-shadow: 0 0 10px 3px rgba(0,0,0,0.4);
     font-size: 16px;
     padding-left: 15px;
@@ -272,7 +272,7 @@ nav.nav {
     background-color: white;
     width: 150px;
   }
-  .page-children > div.btn-line-color1:hover {
+  .nav .nav-container > div.btn-line-color1:hover {
     background-color: $bg-color1;
   }
 }
@@ -974,7 +974,7 @@ $email-height: 30px;
 .downloadport-btn {
   position: fixed;
   right: 35px;
-  bottom: 10px;
+  bottom: 45px;
   z-index: 99;
   box-shadow: 0 0 10px 3px rgba(0,0,0,0.4);
   font-size: 16px;
@@ -1578,6 +1578,9 @@ and (max-width: 576px) {
 /* -------- Small Phones ---------*/
 @media only screen
 and (max-width: 400px) {
+  .nav a:not(.logo-link) {
+    padding: 7px 5px;
+  }
   .internship-program a .content-program h4 {
     padding-left: 10px;
     font-size: 16px;
